# Ambrosia

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Readme.md  test.db
Ambrosia/: CMakeLists.txt
Ambrosia/inc/CLI/: Application.hpp
Ambrosia/inc/Core/: Application.hpp  Database.hpp
Ambrosia/inc/Core/Entities/: EntityBase.hpp  Ingredient.hpp  MeasurementUnit.hpp  Recipe.hpp
Ambrosia/inc/Core/Models/: Ingredient.hpp  MeasurementUnit.hpp  ModelBase.hpp  Recipe.hpp
Ambrosia/inc/Core/Utils/: Utils.hpp
Ambrosia/src/: main.cpp
Ambrosia/src/Core/: Database.cpp
Ambrosia/src/Core/Entities/: EntityBase.cpp  Ingredient.cpp  MeasurementUnit.cpp  Recipe.cpp
Ambrosia/src/Core/Models/: Ingredient.cpp  MeasurementUnit.cpp  ModelBase.inl  Recipe.cpp
Ambrosia/src/Core/Utils/: Utils.cpp
LibAmbrosia/: CMakeLists.txt
LibAmbrosia/inc/Core/: Database.hpp
LibAmbrosia/src/Core/: Database.cpp
lib/: CMakeLists.txt
